--- a/views/create_puppy.erb
+++ b/views/create_puppy.erb
@@ -1,4 +1,4 @@
-<form method="post" action="/puppy">
+<form method="post" action="/create_puppy">
   <label for="name"> Puppy Name</label>
   <input type="text" id="name" name="name">
   <label for="breed"> Puppy Breed</label>
