--- a/views/index.erb
+++ b/views/index.erb
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
-<h1> Welcome to the puppy adoption site!</h1>
+  <h1> Welcome to the puppy adoption site!</h1>
 
-<a href="/new">List A Puppy</a>
+    <body>
+      <a href="/new">List A Puppy</a>
+    </body>
 </html>
